--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "helloworld",
+  "name": "react_native_2024",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,10 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.5",
-    "expo-status-bar": "~1.11.1",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-picker/picker": "^2.4.10",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/native": "^6.1.9",
+    "expo": "^49.0.22",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
